# worldMap

./: .gitignore  Dockerfile  Dockerfile_frontend  Dockerfile_nginx  docker-compose.yml  readme.md
backend/py/: crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/py/uploads/: Thinking, Fast and Slow (Daniel Kahneman) (Z-Library).pdf.part0  Thinking, Fast and Slow (Daniel Kahneman) (Z-Library).pdf.part1  Thinking, Fast and Slow (Daniel Kahneman) (Z-Library).pdf.part2  Thinking, Fast and Slow (Daniel Kahneman) (Z-Library).pdf.part3
frontend/my-app/: package-lock.json  package.json
frontend/my-app/src/app/: .env.sample  globals.css  page.tsx
frontend/my-app/src/app/components/: FormCity.tsx  Map.tsx  MapComponent.tsx  Modal.tsx
frontend/my-app/src/app/map/: page.tsx
frontend/my-app/src/app/scroll/: page.tsx
frontend/my-app/src/app/store/: store.tsx  useCities.tsx  userCities.tsx
frontend/my-app/src/app/types/: types.tsx
nginx/: Readme.md  nginx.conf
